[package]
name = "cipher_tools"
version = "0.1.0"
authors = ["Christopher T Smith <git@chrstsmth.ca>"]

[dependencies]
clap = "*"
serde = "*"
serde_json = "*"
cipher-lib = { version = "*", path = "../cipher-lib" }
cipher-derive = { version = "*", path = "../cipher-derive" }

[[bin]]
name = "langauge-modeler"
path = "src/language-modeler.rs"

[[bin]]
name = "cipher-tools"
path = "src/cipher-tools.rs"
