[package]
name = "cipher_tools"
version = "0.1.0"
authors = ["Christopher T Smith <git@chrstsmth.ca>"]

[dependencies]
ctrlc = "*"
clap = "*"
serde = "*"
serde_json = "*"
enum-map = "*"
itertools = "*"
cipher-lib = { version = "*", path = "../cipher-lib" }
cipher-tools-lib = { version = "*", path = "../cipher-tools-lib" }
cipher-derive = { version = "*", path = "../cipher-derive" }

[[bin]]
name = "langauge-modeler"
path = "src/language-modeler.rs"

[[bin]]
name = "cipher-tools"
path = "src/cipher-tools/mod.rs"

[[bin]]
name = "dictionary"
path = "src/dictionary/mod.rs"

[[bin]]
name = "analysis"
path = "src/analysis/mod.rs"
