[package]
name = "analyse"
version = "0.1.0"
authors = ["Christopher T Smith <git@chrstsmth.ca>"]

[dependencies]
clap = "*"
enum-map = "*"
itertools = "*"
num = "*"
common = { version = "*", path = "../common" }
cipher-lib = { version = "*", path = "../../cipher-lib" }

[[bin]]
name = "analyse"
path = "src/main.rs"
